--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -1,134 +1,160 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
-@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+    @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<div class="page-head">
-    <div class="page-title">
-        <h1>@IndexResources.User </h1>
-    </div>
-</div>
-<div class="userPage">
-    <div class="profile-sidebar" @*style="width: 250px;"*@>
-        <div class="portlet light profile-sidebar-portlet">
-            <div class="profile-userpic">
-                <user-image ng-if="u.details" class="img-responsive" name="u.details.name" image="u.details.image" width="125" height="125"></user-image>
+        <div class="page-head">
+            <div class="page-title">
+                <h1>@IndexResources.User </h1>
             </div>
-            <div class="profile-usertitle">
-                <h3 class="profile-usertitle-name multi-line-ellipsis limit-two">
-                    {{::u.details.name}}
-                </h3>
-                <h4 class="profile-usertitle-job">
-                    {{::u.details.universityName}}
-                </h4>
-                <button class="message" ng-if="!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
-                    <div class="content">
-                        <md-icon md-svg-icon="t:chat"></md-icon>
-                        @*@Html.Svg("~/images/site/icons.svg", "chat")*@
-                        <span>@UserResources.MessageButton</span>
+        </div>
+        <div class="userPage">
+            <div class="profile-sidebar" style="display: none">
+                <div class="portlet light profile-sidebar-portlet">
+                    <div class="profile-userpic">
+                        <user-image ng-if="u.details" class="img-responsive" name="u.details.name" image="u.details.image" width="125" height="125"></user-image>
                     </div>
-                </button>
-            </div>
-        </div>
-
-        <div class="points-container">
-            <h5 count-up id="points" end-val="{{u.details.score}}" duration="3"></h5>
-            <h5>@UserResources.Points</h5>
-        </div>
-        <div class="points-awards" hide-xs>
-            <span class="earn">@UserResources.Share</span>
-            <ul style="list-style-type:square">
-                <li>@UserResources.Creating</li>
-                <li>@UserResources.Accepted</li>
-            </ul>
-            <span class="earn">@UserResources.PointMenu2</span>
-            <ul style="list-style-type:square">
-                <li>@UserResources.AcceptedToCourse</li>
-                <li>@UserResources.UploadItem</li>
-                <li>@UserResources.Answering</li>
-                <li>@UserResources.Asking</li>
-                <li>@UserResources.Likes</li>
-                <li>@UserResources.ShareFB</li>
-            </ul>
-        </div>
-    </div>
-    <div class="profile-content">
-        <div class="portlet light">
-
-            <md-tabs class="page-tabs" md-dynamic-height="true">
-                <md-tab md-on-select="u.changeTab(u.state.box)" md-active="u.tab === u.state.box">
-                    <md-tab-label><h3>@GeneralResources.Classes</h3> <div class="number">{{::u.details.numClass | megaNumber}}</div></md-tab-label>
-                </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.item)" md-active="u.tab === u.state.item">
-                    <md-tab-label><h3>@UserResources.Uploads</h3> <div class="number">{{u.details.numItem | megaNumber}}</div></md-tab-label>
-                </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.post)" md-active="u.tab === u.state.post">
-                    <md-tab-label><h3>@UserResources.Posts</h3> <div class="number">{{::u.details.numFeed | megaNumber}}</div></md-tab-label>
-                </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.quiz)" md-active="u.tab === u.state.quiz">
-                    <md-tab-label><h3>@GeneralResources.Quizzes</h3> <div class="number">{{::u.details.numQuiz | megaNumber}}</div></md-tab-label>
-                </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.friend)" md-active="u.tab === u.state.friend">
-                    <md-tab-label><h3>@GeneralResources.Members</h3> <div class="number">{{::u.details.numFriend | megaNumber}}</div></md-tab-label>
-                </md-tab>
-
-            </md-tabs>
-            <div class="tab-content" ng-switch on="u.tab">
-                <div ng-switch-when="b">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div class="user-box" flex-xs="100" flex-xl="33" flex="33" flex-sm="50" flex-md="50" ng-repeat="e in u.boxes" ng-include="'box-template.html'"></div>
+                    <div class="profile-usertitle">
+                        <h3 class="profile-usertitle-name multi-line-ellipsis limit-two">
+                            {{::u.details.name}}
+                        </h3>
+                        <h4 class="profile-usertitle-job">
+                            {{::u.details.universityName}}
+                        </h4>
+                        <button class="message" ng-if="!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
+                            <div class="content">
+                                <md-icon md-svg-icon="t:chat"></md-icon>
+                                @*@Html.Svg("~/images/site/icons.svg", "chat")*@
+                                <span>@UserResources.MessageButton</span>
+                            </div>
+                        </button>
                     </div>
                 </div>
-                <div ng-switch-when="u">
-                    <div layout="row" layout-padding layout-fill layout-wrap srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" class="file item-animate i-q-wrapper" ng-repeat="e in u.files">
-                            <div ng-include="'item-template.html'"></div>
-                            <md-menu class="item-menu">
-                                <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['user-uploads', 'deleteFile']">
-                                    <md-icon md-svg-icon="t:ThreeDots" class="dots-3"></md-icon>
-                                    @*@Html.Svg("~/images/site/icons.svg", "ThreeDots", new {@class = "dots-3"})*@
-                                </md-button>
-                                <md-menu-content width="1">
-                                    <md-menu-item>
-                                        <md-button ng-href="{{::e.downloadLink}}" ng-click="u.downloadItem()" target="_blank" ga-track-event="['user-uploads', 'download']">
-                                            <span ng-if="e.type!=='Link'">@GeneralResources.Download</span>
-                                            <span ng-if="e.type==='Link'">@GeneralResources.View</span>
+                <div class="points-container">
+                    <h5 count-up id="points" end-val="{{u.details.score}}" duration="3"></h5>
+                    <h5>@UserResources.Points</h5>
+                </div>
+            </div>
+            <div class="profile-content">
+                <div class="portlet light">
+
+                    <md-tabs class="page-tabs" md-dynamic-height="true">
+                        <md-tab md-on-select="u.changeTab(u.state.badges)" md-active="u.tab === u.state.levels || u.tab === u.state.badges || u.tab === u.state.community">
+                            <md-tab-label><h3>@GamificationResources.Badges</h3> <div class="number"></div></md-tab-label>
+                        </md-tab>
+                        <md-tab md-on-select="u.changeTab(u.state.item)" md-active="u.tab === u.state.item">
+                            <md-tab-label><h3>@UserResources.Uploads</h3> <div class="number">{{u.details.numItem | megaNumber}}</div></md-tab-label>
+                        </md-tab>
+                        <md-tab md-on-select="u.changeTab(u.state.post)" md-active="u.tab === u.state.post">
+                            <md-tab-label><h3>@UserResources.Posts</h3> <div class="number">{{::u.details.numFeed | megaNumber}}</div></md-tab-label>
+                        </md-tab>
+                        <md-tab md-on-select="u.changeTab(u.state.quiz)" md-active="u.tab === u.state.quiz">
+                            <md-tab-label><h3>@GeneralResources.Quizzes</h3> <div class="number">{{::u.details.numQuiz | megaNumber}}</div></md-tab-label>
+                        </md-tab>
+                        <md-tab md-on-select="u.changeTab(u.state.friend)" md-active="u.tab === u.state.friend">
+                            <md-tab-label><h3>@GeneralResources.Members</h3> <div class="number">{{::u.details.numFriend | megaNumber}}</div></md-tab-label>
+                        </md-tab>
+
+                    </md-tabs>
+                    <div class="tab-content" ng-switch on="u.tab">
+                        <div ng-switch-when="b" class="badges">
+                            <div class="badges-bar">
+                                <div class="info">
+                                    <md-icon md-svg-icon="p:q-mark" class=""></md-icon>
+                                </div>
+                                <md-tabs class="badges-tabs" md-dynamic-height="true" md-stretch-tabs="always">
+                                    <md-tab md-on-select="u.changeBadgesTab(u.badgesState.levels)" md-active="u.badgesTab === u.badgesState.levels">
+                                        <md-tab-label><h4>@GamificationResources.Levels</h4></md-tab-label>
+                                    </md-tab>
+                                    <md-tab md-on-select="u.changeBadgesTab(u.badgesState.badges)" md-active="u.badgesTab === u.badgesState.badges">
+                                        <md-tab-label><h4>@GamificationResources.Badges</h4></md-tab-label>
+                                    </md-tab>
+                                    <md-tab md-on-select="u.changeBadgesTab(u.badgesState.community)" md-active="u.badgesTab === u.badgesState.community">
+                                        <md-tab-label><h4>@GamificationResources.Community</h4></md-tab-label>
+                                    </md-tab>
+                                </md-tabs>
+                            </div>
+                            <div class="badges-tab-content" ng-switch on="u.badgesTab">
+                                <div ng-switch-when="l" class="tab levels">
+                                    <md-icon md-svg-icon="p:stars" class="bg"></md-icon>
+                                    <ul>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelFreshmanTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelFreshmanTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelFreshmanTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div ng-switch-when="b" class="tab badges">badges</div>
+                                <div ng-switch-when="c" class="tab community">community</div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="u">
+                            <div layout="row" layout-padding layout-fill layout-wrap srph-infinite-scroll="u.myPagingFunction()">
+                                <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" class="file item-animate i-q-wrapper" ng-repeat="e in u.files">
+                                    <div ng-include="'item-template.html'"></div>
+                                    <md-menu class="item-menu">
+                                        <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['user-uploads', 'deleteFile']">
+                                            <md-icon md-svg-icon="t:ThreeDots" class="dots-3"></md-icon>
+                                            @*@Html.Svg("~/images/site/icons.svg", "ThreeDots", new {@class = "dots-3"})*@
                                         </md-button>
-                                    </md-menu-item>
-                                    <md-menu-item ng-if="u.isUserProfile">
-                                        <md-button ng-click="u.deleteItem($event,e)" ga-track-event="['box-items', 'didDelete']">
-                                            @GeneralResources.Delete
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
+                                        <md-menu-content width="1">
+                                            <md-menu-item>
+                                                <md-button ng-href="{{::e.downloadLink}}" ng-click="u.downloadItem()" target="_blank" ga-track-event="['user-uploads', 'download']">
+                                                    <span ng-if="e.type!=='Link'">@GeneralResources.Download</span>
+                                                    <span ng-if="e.type==='Link'">@GeneralResources.View</span>
+                                                </md-button>
+                                            </md-menu-item>
+                                            <md-menu-item ng-if="u.isUserProfile">
+                                                <md-button ng-click="u.deleteItem($event,e)" ga-track-event="['box-items', 'didDelete']">
+                                                    @GeneralResources.Delete
+                                                </md-button>
+                                            </md-menu-item>
+                                        </md-menu-content>
+                                    </md-menu>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="p">
+                            <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
+                                <div flex="100" ng-repeat="e in u.feed" ng-include="'user-feed-template.html'"></div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="q">
+                            <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
+                                <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in u.quiz" ng-include="'quiz-template.html'"></div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="f">
+                            <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
+                                <div flex-xs="100" flex-xl="25" flex="50" flex-sm="100" flex-md="50" ng-repeat="e in u.friends" ng-include="'user-template.html'"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div ng-switch-when="p">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex="100" ng-repeat="e in u.feed" ng-include="'user-feed-template.html'"></div>
-                    </div>
-                </div>
-                <div ng-switch-when="q">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in u.quiz" ng-include="'quiz-template.html'"></div>
-                    </div>
-                </div>
-                <div ng-switch-when="f">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="100" flex-xl="25" flex="50" flex-sm="100" flex-md="50" ng-repeat="e in u.friends" ng-include="'user-template.html'"></div>
-                    </div>
-                </div>
             </div>
         </div>
-    </div>
-</div>
 
-<script type="text/ng-template" id="user-feed-template.html">
-    <a class="posts" href="{{::e.url}}">
-        <div>
-            <span class="post-headline" d-color="{{::e.boxName.length}}">{{::e.boxName}}</span>
-            <span class="post-content" ng-bind-html="::e.content | linky:'_blank'"></span>
-        </div>
-        <time-ago class="time-ago" from-time="{{::e.creationTime }}" format="mediumDate"></time-ago>
-    </a>
-</script>
+        <script type="text/ng-template" id="user-feed-template.html">
+            <a class="posts" href="{{::e.url}}">
+                <div>
+                    <span class="post-headline" d-color="{{::e.boxName.length}}">{{::e.boxName}}</span>
+                    <span class="post-content" ng-bind-html="::e.content | linky:'_blank'"></span>
+                </div>
+                <time-ago class="time-ago" from-time="{{::e.creationTime }}" format="mediumDate"></time-ago>
+            </a>
+        </script>
