--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
@@ -100,8 +100,80 @@
 .userPage md-pagination-wrapper {
   height: 54px;
 }
+.userPage .badges-tabs md-tabs-canvas,
+.userPage .badges-tabs md-pagination-wrapper {
+  height: 90px;
+}
 .userPage .tab-content {
   margin: 0 -8px;
+}
+.userPage .tab-content .badges {
+  margin: 0 8px;
+  background: #f5f5f5;
+  border-radius: 10px;
+}
+.userPage .tab-content .badges .badges-bar {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  border-radius: 10px 10px 0 0;
+  background: #323538;
+}
+.userPage .tab-content .badges .badges-bar md-icon {
+  width: 28px;
+  height: 28px;
+  margin-top: 24px;
+  margin-right: 32px;
+}
+.userPage .tab-content .badges .info {
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+.userPage .tab-content .badges md-tabs {
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+.userPage .tab-content .badges md-tabs h4 {
+  font-size: 20px;
+  margin: 26px 0;
+}
+.userPage .tab-content .badges md-tabs .md-tab.md-active {
+  color: #ffce2f;
+}
+.userPage .tab-content .badges .tab.levels {
+  position: relative;
+}
+.userPage .tab-content .badges .tab.levels .bg {
+  position: absolute;
+}
+.userPage .tab-content .badges .tab.levels ul {
+  padding: 0;
+}
+.userPage .tab-content .badges .tab.levels .level {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  font-size: 18px;
+  padding: 25px 50px;
+}
+.userPage .tab-content .badges .tab.levels .level .title {
+  text-align: center;
+}
+.userPage .tab-content .badges .tab.levels .level .body {
+  padding-right: 50px;
+}
+.userPage .tab-content .badges .tab.levels .image {
+  width: 150px;
+  height: 150px;
+  background: rgba(255, 206, 47, 0.5);
+}
+.userPage .tab-content .badges md-ink-bar {
+  background: #ffce2f;
+  height: 10px;
 }
 .userPage md-tab-content {
   background: #dadada;
