--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -37,6 +37,7 @@
 @textColorPurple: #33076e;
 @textColorDisabledActionButton: #83b6d0;
 @textColorDisabledCancelButton: #7d7d7d;
+@badgesYellow: #ffce2f;
 
 ////backgrounds
 @backgroundColor: #dadada;
