--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
@@ -25,7 +25,7 @@
                 height: ~"calc(100vh - @{heightOfstaticPageHeader} + 1px)";
 
                 .forms {
-                    max-height: 100vh;
+                    max-height: inherit;
                 }
             }
 
