--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -628,7 +628,7 @@
   width: 10px;
   height: 10px;
   border-radius: 100%;
-  background: #3293f6;
+  background: #32b40d;
   position: absolute;
   right: 37px;
   bottom: 7px;
