--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -101,6 +101,10 @@
                 line-height: normal;
                 min-height: 23px;
                 width: 162px;
+                background: #ffce2f;
+                color: @textColorBlack;
+                text-transform: uppercase;
+                font-weight: bold;
             }
 
             .universityStats {
@@ -113,7 +117,7 @@
                 padding: 6px 10px;
                 position: absolute;
                 bottom: 0;
-                width: 100%
+                width: 100%;
                 /*div {
                 height: 10px;
                 line-height: 10px;
