--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.rtl.css
@@ -131,6 +131,10 @@
   line-height: normal;
   min-height: 23px;
   width: 162px;
+  background: #ffce2f;
+  color: #212325;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 .dashboard .university .bottom .universityStats {
   font-size: 12px;
@@ -140,7 +144,8 @@
   padding: 6px 10px;
   position: absolute;
   bottom: 0;
-  width: 100% /*div {
+  width: 100%;
+  /*div {
                 height: 10px;
                 line-height: 10px;
                 display: inline-block;
@@ -149,7 +154,7 @@
             div:nth-child(2) {
                 padding: 0 6px;
                 margin: 0 6px;
-            }*/;
+            }*/
 }
 .dashboard .universityimg {
   background: #f5f5f5;
