--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -81,21 +81,58 @@
                                                 <div class="image"></div>
                                                 <div class="name">@GamificationResources.LevelFreshmanTitle</div>
                                             </div>
-                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                            <div class="body">
+                                                @GamificationResources.LevelFreshmanBody
+                                            </div>
                                         </li>
                                         <li class="level">
                                             <div class="title">
                                                 <div class="image"></div>
-                                                <div class="name">@GamificationResources.LevelFreshmanTitle</div>
+                                                <div class="name">@GamificationResources.LevelSophomoreTitle</div>
                                             </div>
-                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                            <div class="body">@GamificationResources.LevelSophomoreBody</div>
                                         </li>
                                         <li class="level">
                                             <div class="title">
                                                 <div class="image"></div>
-                                                <div class="name">@GamificationResources.LevelFreshmanTitle</div>
+                                                <div class="name">@GamificationResources.LevelUpperclassmanTitle</div>
                                             </div>
-                                            <div class="body">@GamificationResources.LevelFreshmanBody</div>
+                                            <div class="body">@GamificationResources.LevelUpperclassmanBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelStraightAStudentTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelStraightAStudentBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelScholarTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelScholarBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelProfessorTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelProfessorBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelPhDTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelPhDBody</div>
+                                        </li>
+                                        <li class="level">
+                                            <div class="title">
+                                                <div class="image"></div>
+                                                <div class="name">@GamificationResources.LevelEinsteinTitle</div>
+                                            </div>
+                                            <div class="body">@GamificationResources.LevelEinsteinBody</div>
                                         </li>
                                     </ul>
                                 </div>
