--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -480,8 +480,8 @@ md-menu-item > a.md-button {
         }
     }
 
-    .dropbox {
-        &:hover {
+    .dropbox:hover {
+        md-icon {
             fill: @dropboxColor;
         }
     }
