--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -171,8 +171,8 @@
                                     @*@Html.Svg(url, "googleDrive")
                                     @Html.Svg(url, "googleDriveClean")*@
                                 </button>
-                                <button user-not-register-popup="click" type="button" ng-mouseover="f.add.init()" ng-disabled="f.add.dropboxDisabled" ng-click="f.add.dropbox(post.id)" ga-track-event="['box-feed', 'dropbox']">
-                                    <md-icon md-svg-icon="u:dropbox" class="dropbox"></md-icon>
+                                <button user-not-register-popup="click" class="dropbox" type="button" ng-mouseover="f.add.init()" ng-disabled="f.add.dropboxDisabled" ng-click="f.add.dropbox(post.id)" ga-track-event="['box-feed', 'dropbox']">
+                                    <md-icon md-svg-icon="u:dropbox"></md-icon>
                                     @*@Html.Svg(url, "dropbox", new {@class = "dropbox"})*@
                                 </button>
                             </div>
